<resources>
    <string name="app_name">Dr. Mozio</string>
    <string name="title_activity_dashoard">DashoardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="toddsSyndromeDiagnosis">Todd\'s Syndrome Diagnosis</string>
    <string name="patientsRecord">Patient\'s Record</string>
    <string name="name">Name:</string>
    <string name="do_you_have_migrane_disorder">Do you have migrane
        ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gender">Gender:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="do_you_consume_hallucinogenic_drugs">Have you consumed hallucinogenic drugs in past?</string>
    <string name="age">Age:</string>
    <string name="enter_name">Enter Name</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="no_data_available">No Data Available</string>
    <string name="migrane">Migrane</string>
</resources>
