<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/tableMarginVertically">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    style="@style/tableLabelStyle"/>
                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:lines="1"
                    android:hint="@string/enter_name"
                    android:maxLines="1"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_have_migrane_disorder"
                style="@style/tableLabelStyle"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/tableMarginVertically"
                >
                <RadioButton
                    android:id="@+id/migraneYesRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:checked="true"
                    style="@style/tableRadioFieldStyle"/>
                <RadioButton
                    android:id="@+id/migraneNoRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    style="@style/tableRadioFieldStyle"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_consume_hallucinogenic_drugs"
                style="@style/tableLabelStyle"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/tableMarginVertically"
                >
                <RadioButton
                    android:id="@+id/halluYesRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:checked="true"
                    style="@style/tableRadioFieldStyle"/>
                <RadioButton
                    android:id="@+id/halluNoRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    style="@style/tableRadioFieldStyle"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                style="@style/tableLabelStyle"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/tableMarginVertically"
                >
                <RadioButton
                    android:id="@+id/maleRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Male"
                    android:checked="true"
                    style="@style/tableRadioFieldStyle"/>
                <RadioButton android:id="@+id/femaleRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Female"
                    style="@style/tableRadioFieldStyle"/>
            </RadioGroup>



            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    style="@style/tableLabelStyle"/>
                <TextView
                    android:id="@+id/ageTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/tableRadioFieldStyle"
                    android:text="33 years"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <com.appyvet.rangebar.RangeBar
                android:id="@+id/ageRB"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                custom:tickStart="1"
                custom:tickInterval="1"
                custom:tickEnd="100"
                custom:rangeBar = "false"
                custom:tickColor="@color/colorAccent"
                custom:pinColor="@color/colorAccent"
                custom:selectorColor="@color/colorAccent"
                custom:connectingLineColor="@color/colorAccent"
                android:layout_marginBottom="@dimen/tableMarginVertically"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/submitB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:layout_margin="5dp"/>
                <Button
                    android:id="@+id/resetB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:layout_margin="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>